--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">NokiaHslVisualisation</string>
+
+    // Menu Items
+    <string name="menu_home">Home</string>
+    <string name="menu_list">List View</string>
+    <string name="menu_map">Map</string>
+
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
