--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -6,6 +6,14 @@
     <string name="menu_list">List View</string>
     <string name="menu_map">Map</string>
 
+    // List view
+    <string name="button_text">Refresh</string>
+    // Content descriptions
+    <string name="bus_icon_content_description">Bus Icon</string>
+
+
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
