--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -1,16 +1,16 @@
 <resources>
     <string name="app_name">NokiaHslVisualisation</string>
 
-    // Menu Items
+    // Fragment titles
     <string name="menu_home">Home</string>
     <string name="menu_list">List View</string>
     <string name="menu_map">Map</string>
+    <string name="details_view">Bus details</string>
 
     // List view
     <string name="button_text">Refresh</string>
     // Content descriptions
     <string name="bus_icon_content_description">Bus Icon</string>
-
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
