--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -20,7 +20,9 @@
 
     // Home fragment
     <string name="btn_alerts">Get Alerts</string>
-    <string name="btn_positions">Get Positions</string>
+    <string name="btn_start_mqtt">Start MQTT</string>
+    <string name="btn_stop_mqtt">Stop MQTT</string>
+
 
     <string name="mapbox_access_token">pk.eyJ1IjoiZGVkYXNzZSIsImEiOiJja21sejhvbW4wMm9oMnZwZWxlNjZ3Y2Q2In0.lvdWT_LNNIlwM-AxY0m7UA</string>
 </resources>
