--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_list">List View</string>
     <string name="menu_map">Map</string>
+    <string name="menu_AR">AR View</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
