--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -6,12 +6,15 @@
     <string name="menu_list">List View</string>
     <string name="menu_map">Map</string>
     <string name="details_view">Bus details</string>
+    <string name="alert_details_view">Alert details</string>
     <string name="menu_ar">AR View</string>
 
     // List view
     <string name="button_text">Refresh</string>
     // Content descriptions
     <string name="bus_icon_content_description">Bus Icon</string>
+    <string name="alert_icon_content_description">Alert Icon</string>
+
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
