--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="button_text">Refresh</string>
     // Content descriptions
     <string name="bus_icon_content_description">Bus Icon</string>
+    <string name="alert_icon_content_description">Alert Icon</string>
+
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
