Added color changes between dark and light mode. Made sliding drawer view for traffic filtering. Removed excess code. Added extensions to build gradle

--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -66,4 +66,27 @@
     <string name="MEDICAL_EMERGENCY">Medical emergency</string>
     <string name="menu_positions">Vehicles</string>
     <string name="menu_vehicles">Vehicles</string>
+
+    // Traffic Filters
+    <string name="criticality_menu_item">Criticality</string>
+    <string name="critical_menu_item">Critical</string>
+    <string name="major_menu_item">Major</string>
+    <string name="minor_menu_item">Minor</string>
+    <string name="clear_text">Clear</string>
+
+
+    <string name="distance_menu_item">Distance</string>
+    <string name="minimum_distance_menu_item">Minimum distance</string>
+    <string name="maximum_distance_menu_item">Maximum distance</string>
+
+    <string name="type_menu_item">Traffic cause type</string>
+    <string name="event_menu_item">Event</string>
+    <string name="incident_menu_item">Incident</string>
+
+    <string name="miscellaneous_menu_item">Miscellaneous</string>
+    <string name="road_closed_menu_item">Road closed</string>
+    <string name="response_vehicles_menu_item">Response vehicles</string>
+    <string name="apply_button_menu_item">Apply</string>
+
+
 </resources>
