--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -67,4 +67,8 @@
     <string name="menu_positions">Vehicles</string>
     <string name="menu_vehicles">Vehicles</string>
     <string name="alert_filtering_preferences">Alert filtering preferences</string>
+
+    // AR
+    <string name="user_location_permission_explanation">WIP</string>
+    <string name="user_location_permission_not_granted">Location permission not granted</string>
 </resources>
