--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="user_location_permission_explanation">WIP</string>
     <string name="user_location_permission_not_granted">Location permission not granted</string>
     <string name="distance_hint">e.g. 10</string>
+    <string name="CAUSE_MODIFIED_SERVICE">Modified service</string>
 </resources>
