--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -95,4 +95,10 @@
     <string name="user_location_permission_not_granted">Location permission not granted</string>
     <string name="distance_hint">e.g. 10</string>
     <string name="CAUSE_MODIFIED_SERVICE">Modified service</string>
+    <string name="late_vehicles_title">Vehicle problems</string>
+    <string name="late_5_mins">Late more than 5 minutes</string>
+    <string name="on_wrong_route">On wrong route</string>
+    <string name="speeding">Vehicle is speeding</string>
+    <string name="late_time">Set vehicle late time</string>
+    <string name="vehicle_late_time_hint">Seconds late</string>
 </resources>
