added link to here maps api key tutorial

--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="toast_api_key">To use traffic data, you need HERE maps API key. You can sign up for it in https://developer.here.com/tutorials/getting-here-credentials/</string>
     <string name="add_api_key_button">Add key</string>
     <string name="api_key_edit_text_hint">API-key here</string>
+    <string name="api_key_link_button_text">LINK</string>
 
     // Content descriptions
     <string name="warning_icon_content_description">Warning icon</string>
