--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -103,4 +103,6 @@
     <string name="vehicle_late_time_hint">Seconds late</string>
     <string name="show_trams">Show only trams</string>
     <string name="show_busses">Show only busses</string>
+    <string name="see_bus_lines_hint">Enter a line number</string>
+    <string name="lines_search">See all vehicles on a line</string>
 </resources>
