--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -99,7 +99,7 @@
     <string name="user_location_permission_not_granted">Location permission not granted</string>
     <string name="distance_hint">e.g. 10</string>
     <string name="CAUSE_MODIFIED_SERVICE">Modified service</string>
-    <string name="late_vehicles_title">Vehicle problems</string>
+    <string name="late_vehicles_title">Vehicles</string>
     <string name="late_5_mins">Late more than 5 minutes</string>
     <string name="on_wrong_route">On wrong route</string>
     <string name="speeding">Vehicle is speeding</string>
@@ -110,4 +110,7 @@
     <string name="see_bus_lines_hint">Enter a line number</string>
     <string name="lines_search">See all vehicles on a line</string>
     <string name="ar_map_refresh_button_text">Refresh Map</string>
+    <string name="bus_count">Active busses on map: %1$s</string>
+    <string name="tram_count">Active trams on map: %1$s</string>
+    <string name="vehicle_count">"Active vehicles on map: %1$s"</string>
 </resources>
