analytics HSL query

--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -124,4 +124,6 @@
     <string name="arcore_not_supported" >This device does not support AR</string>
     <string name="arcore_not_installed">Please install ARCore</string>
     <string name="arcore_not_updated">Please update ARCore</string>
+    <string name="menu_analytics">Analytics</string>
+    <string name="analytics">Quering HSL API...</string>
 </resources>
