--- a/NokiaHslVisualisation/app/src/main/res/values/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
     <string name="POLICE_ACTIVITY">Police activity</string>
     <string name="MEDICAL_EMERGENCY">Medical emergency</string>
     <string name="menu_positions">Vehicles</string>
-    <string name="menu_vehicles">Analytics</string>
+    <string name="menu_analytics">Analytics</string>
     <string name="alert_filtering_preferences">Alert filtering preferences</string>
 
     // Traffic Filters
@@ -124,6 +124,12 @@
     <string name="arcore_not_supported" >This device does not support AR</string>
     <string name="arcore_not_installed">Please install ARCore</string>
     <string name="arcore_not_updated">Please update ARCore</string>
-    <string name="menu_analytics">Analytics</string>
     <string name="analytics">Quering HSL API...</string>
+    <string name="analytics_text_view">Query finished %1$s  Query elapsed %2$s milliseconds</string>
+    <string name="analytics_chartmodel_title">Arrival times at stops</string>
+    <string name="arrival_times_text">Arrival times</string>
+    <string name="busses_text">Buses</string>
+    <string name="trams_text">Trams</string>
+    <string name="metros_text">Metros</string>
+
 </resources>
