--- a/NokiaHslVisualisation/app/src/main/res/values-fi-rFI/strings.xml
+++ b/NokiaHslVisualisation/app/src/main/res/values-fi-rFI/strings.xml
@@ -78,6 +78,7 @@
     <string name="vehicle_late_time_hint">Sekuntia myöhässä</string>
     <string name="show_trams">Näytä vain raitiovaunut</string>
     <string name="show_busses">Näytä vain bussit</string>
+    <string name="show_metros">Näytä vain metrot</string>
     <string name="see_bus_lines_hint">Syötä linjanumero</string>
     <string name="lines_search">Näytä kaikki kulkuneuvot linjalla</string>
     <string name="ar_map_refresh_button_text">Lataa kartta uudelleen</string>
@@ -87,5 +88,4 @@
     <string name="clear_map">Tyhjennä kartta</string>
     <string name="show_traffic_items">Näytä liikennetiedot</string>
     <string name="traffic_info_title">HERE karttojen liikennetiedot</string>
-    <string name="show_metro">Näytä vain metrot</string>
 </resources>
